<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transportation.activities.TransportActivity">

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/gray"
        android:text="@string/back_str"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="233dp"
        android:layout_height="192dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/planeButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plane_str" />

        <RadioButton
            android:id="@+id/trainButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train_str" />

        <RadioButton
            android:id="@+id/busButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bus_str" />

        <RadioButton
            android:id="@+id/carButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/car_str" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:text="@string/transport_type_str"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/price_str"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/transport_str"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/priceSliderId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:valueFrom="100.0"
        android:valueTo="1000.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/your_loc_str"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/yourLocationId"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/yourLocationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dest_str"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/destinationId"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/destinationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="140dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>